Adding dockerfile
